--- a/taskmate/toDoList/templates/contact.html
+++ b/taskmate/toDoList/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}
-<title>Task Page - Django</title>
+<title>Contact Page - Django</title>
 {%endblock title %} {% block body_content %}
 <h3>{{data}}</h3>
 {% endblock body_content %}
