--- a/taskmate/toDoList/templates/todo.html
+++ b/taskmate/toDoList/templates/todo.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}
-<title>Task Page - Django</title>
-{%endblock title %} {% block body_content %}
+<title>To Do Page - Django</title>
+{% endblock title %} {% block body_content %}
 <h3>{{data}}</h3>
 {% endblock body_content %}
