--- a/taskmate/toDoList/templates/todo.html
+++ b/taskmate/toDoList/templates/todo.html
@@ -2,12 +2,39 @@
 <title>To Do Page - Django</title>
 {% endblock title %} {% block body_content %}
 <h3>{{welcome_text}}</h3>
+
+{% if messages %} {% for x in messages %} {{x}} {% endfor %} {% endif %}
+
+<form method="POST">
+  {% csrf_token %}
+  <div>
+    <label>Tasks</label>
+    <input name="task" type="text" placeholder="Note down your Tasks" />
+  </div>
+  <button type="submit">Add Todo</button>
+</form>
+{% comment %} whenever we deal with forms we need ad CSRF token for data
+security, without this post request with form wont work {% endcomment %}
 <div>
-  {% for obj in data %}
-  <ol>
-    {{obj.id}} - {{obj.task}} -
-    <code>{% if obj.status %} Done {% else %} Yet to be done{% endif %}</code>
-  </ol>
-  {% endfor %}
+  <table>
+    <tr>
+      <th>Sno</th>
+      <th>Todo's</th>
+      <th>Status</th>
+      <th>Actions</th>
+    </tr>
+    {% if data %} {% for obj in data %}
+    <tr>
+      <td>{{obj.id}}</td>
+      <td>{{obj.task}}</td>
+      <td>
+        <code
+          >{% if obj.status %} Done {% else %} Yet to be done{% endif %}</code
+        >
+      </td>
+      <td><a href="{% url "editToDo" obj.id %}">Edit</a> | <a href="{% url "deleteToDo" obj.id %}">Delete</a></td>
+    </tr>
+    {% endfor %} {% endif %}
+  </table>
 </div>
 {% endblock body_content %}
