--- a/taskmate/templates/base.html
+++ b/taskmate/templates/base.html
@@ -1,13 +1,24 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 {% block title %}{% endblock title %}
-<div>
-  <h1>DJANGO WELCOMES YOU - HEADER</h1>
-  <div>
-    <a href="{% url "toDoList" %}">To Do</a>
-    <a href="{% url "taskList" %}">Pending Tasks</a>
-    <a href="{% url "contactUs" %}">Contact Us</a>
-    <a href="{% url "aboutUs" %}">About Us</a>
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url "home" %}">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="{% url "toDoList" %}">To Do</a>
+        <a class="nav-link" href="{% url "taskList" %}">Pending Tasks</a>
+        <a class="nav-link" href="{% url "contactUs" %}">Contact Us</a>
+        <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">About Us</a>
+      </div>
+    </div>
   </div>
-</div>
+</nav>
 {% block body_content %}{% endblock body_content %}
 <div>
   <h1>THANK YOU - FOOTER</h1>
