--- a/taskmate/templates/base.html
+++ b/taskmate/templates/base.html
@@ -15,6 +15,8 @@
         <a class="nav-link" href="{% url "taskList" %}">Pending Tasks</a>
         <a class="nav-link" href="{% url "contactUs" %}">Contact Us</a>
         <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">About Us</a>
+        <a class="nav-link" aria-disabled="true" href="{% url "register" %}">Register</a>
+        <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">Login</a>
       </div>
     </div>
   </div>
