--- a/taskmate/templates/base.html
+++ b/taskmate/templates/base.html
@@ -16,7 +16,7 @@
         <a class="nav-link" href="{% url "contactUs" %}">Contact Us</a>
         <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">About Us</a>
         <a class="nav-link" aria-disabled="true" href="{% url "register" %}">Register</a>
-        <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">Login</a>
+        <a class="nav-link" aria-disabled="true" href="{% url "login" %}">Login</a>
       </div>
     </div>
   </div>
