authentication using django decorators with restrictions in rendering lists to authenticted users

--- a/taskmate/usersApp/templates/logout.html
+++ b/taskmate/usersApp/templates/logout.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="container">
-  <h5><a href={% url "login" %}>Once More, Click me!</a></h5>
+  <h5><a href={% url "login" %}>Again, Click me!</a></h5>
 </div>
 
 {% endblock body_content %} {% comment %} why we use {{form|crispy}} like this -
