--- a/taskmate/templates/base.html
+++ b/taskmate/templates/base.html
@@ -11,12 +11,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="{% url "toDoList" %}">To Do</a>
-        <a class="nav-link" href="{% url "taskList" %}">Pending Tasks</a>
-        <a class="nav-link" href="{% url "contactUs" %}">Contact Us</a>
         <a class="nav-link" aria-disabled="true" href="{% url "aboutUs" %}">About Us</a>
-        <a class="nav-link" aria-disabled="true" href="{% url "register" %}">Register</a>
-        <a class="nav-link" aria-disabled="true" href="{% url "login" %}">Login</a>
+        <a class="nav-link" href="{% url "contactUs" %}">Contact Us</a>
+        {% if user.is_authenticated %}
+          <a class="nav-link active" aria-current="page" href="{% url "toDoList" %}">To Do</a>
+          <a class="nav-link" href="{% url "taskList" %}">Pending Tasks</a>
+          <a class="nav-link" href="#">Welcome {{ user.username }} !</a>
+          <a class="nav-link" aria-disabled="true" href="{% url "logout" %}">Log Out</a>
+        {% else %}
+          <a class="nav-link" aria-disabled="true" href="{% url "register" %}">Register</a>
+          <a class="nav-link" aria-disabled="true" href="{% url "login" %}">Login</a>
+        {% endif %}
       </div>
     </div>
   </div>
